--- a/public/index.html
+++ b/public/index.html
@@ -41,5 +41,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="https://kit.fontawesome.com/6f42c62e39.js" crossorigin="anonymous"></script>
   <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 </html>
