--- a/public/index.html
+++ b/public/index.html
@@ -42,5 +42,8 @@
     -->
   </body>
   <script src="https://kit.fontawesome.com/6f42c62e39.js" crossorigin="anonymous"></script>
+  <!-- Home Page review api -->
+  <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+  <!-- Home Page Package api -->
   <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 </html>
